@@ -1,5 +1,10 @@
 2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/ChatWindow.cs: Added a PersonCard with Medium height to chat
+	  window
+
+2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/PersonCard.cs: Fixed the size of the Medium PersonCard
 
 2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 
